samples/_failures_safe/1761263087_1ed0a6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_27e93dae.c: In function ‘main’:
./samples/SAFE/__tmp_27e93dae.c:132:15: error: expected ‘;’ at end of input
  132 |         printf
      |               ^
      |               ;
./samples/SAFE/__tmp_27e93dae.c:132:9: error: expected declaration or statement at end of input
  132 |         printf
      |         ^~~~~~
./samples/SAFE/__tmp_27e93dae.c:132:9: error: expected declaration or statement at end of input
